--- a/index.htm
+++ b/index.htm
@@ -62,6 +62,10 @@
     </head>
     <body>
 
+        <div id="up-to-top">
+            <img src="./img/arrow.svg" alt="">
+        </div>
+
         <div id="panel"></div>
 
         <div id="page">
